--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
+{% include base.html %}
 <header id="is-sticky">
 	<a href="/" class="is-pulled-left"><h1>Preserve This Podcast</h1></a>
 	<nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-menu" id="navMenu">
-		<a href="/about.html">About</a>
-		<a href="/#episodes">Episodes</a>
-		<a href="/#zine">The Zine</a>
-		<a href="/#events">Events</a>
+		<a href="{{ base }}/about.html">About</a>
+		<a href="{{ base }}/#episodes">Episodes</a>
+		<a href="{{ base }}/#zine">The Zine</a>
+		<a href="{{ base }}/#events">Events</a>
 		<a href="{{ site.data.content.survey_link }}" target="_blank">Survey</a>
 		<a href="{{ site.data.content.twitter_link }}" target="_blank">
 			<span class="icon">
