--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+{% include base.html %}
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: page.lang | default: 'en' }}">
 
@@ -13,7 +14,7 @@
 	{% include footer.html %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  	<script src="{{ "/assets/js/scripts.js" | absolute_url }}"></script>
+  	<script src="{{base}}/assets/js/scripts.js"></script>
   </body>
 
 </html>
