--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,23 +2,23 @@
 <header id="is-sticky">
 	<a href="/" class="is-pulled-left"><h1>Preserve This Podcast</h1></a>
 	<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-menu" id="navMenu">
+    <div class="navbar-menu" id="navMenu">
 		<a href="{{ base }}/about.html">About</a>
-		<a href="{{ base }}/#episodes">Episodes</a>
-		<a href="{{ base }}/#zine">The Zine</a>
-		<a href="{{ base }}/#events">Events</a>
 		<a href="{{ site.data.content.survey_link }}" target="_blank">Survey</a>
+		{% if site.data.content.episodes %}<a href="{{ base }}/#podcast">Podcast</a>{% endif %}
+		<a href="{{ base }}/#zine">Zine</a>
+		<a href="{{ base }}/#events">Events</a>
 		<a href="{{ site.data.content.twitter_link }}" target="_blank">
 			<span class="icon">
 			  <i class="fab fa-twitter"></i>
 			</span>
 		</a>
-</div>
-<a role="button" class="navbar-burger is-hidden-desktop" data-target="navMenu" aria-label="menu" aria-expanded="false">
-  <span aria-hidden="true"></span>
-  <span aria-hidden="true"></span>
-  <span aria-hidden="true"></span>
-</a>
+    </div>
+    <a role="button" class="navbar-burger is-hidden-desktop" data-target="navMenu" aria-label="menu" aria-expanded="false">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
 
 	</nav>
 </header>
