--- a/assets/sass/base/_root.scss
+++ b/assets/sass/base/_root.scss
@@ -277,7 +277,7 @@ section#zine {
 
 		@include tablet {
 			float:right;
-			height:100%;
+			height:350px;
 			margin-left:$button-padding-horizontal;
 			margin-bottom:0;
 			img {
