--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer has-text-centered">
 	<div class="container">
-		Brought to you by the <a href="https://metro.org/" target="_blank">Metropolitan New York Library Council</a> with generous support from <a href="https://mellon.org/" target="_blank">the Mellon Foundation</a>.
+		Brought to you by the <a href="https://metro.org/" target="_blank">Metropolitan New York Library Council</a> with generous support from <a href="https://mellon.org/" target="_blank">the Mellon Foundation</a>. Site built by <a href="http://beakerdigital.com/" target="_blank">Beaker Digital</a>.
 	</div>
 </footer>
