add Merch menu item

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
 		{% if site.data.content.episodes %}<a href="{{ base }}/#podcast">Podcast</a>{% endif %}
 		<a href="{{ base }}/#zine">Zine</a>
 		<a href="{{ base }}/#events">Events</a>
+	    	<a href="https://www.teepublic.com/user/preservethispodcast">Merch</a>
 		<a href="{{ site.data.content.twitter_link }}" target="_blank">
 			<span class="icon">
 			  <i class="fab fa-twitter"></i>
