ccby image link out to new tab

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer has-text-centered">
 	<div class="container">
-		Brought to you by the <a href="https://metro.org/" target="_blank">Metropolitan New York Library Council</a> with generous support from <a href="https://mellon.org/" target="_blank">the Mellon Foundation</a>. Site built by <a href="http://beakerdigital.com/" target="_blank">Beaker Digital</a>. This site & all components are licensed under CC BY 4.0 <a class="preview" href="https://creativecommons.org/licenses/by/4.0/"><img src="{{base}}/assets/images/ccby_license.png" alt="Creative Commons Attribution 4.0 International (CC BY 4.0)">
+		Brought to you by the <a href="https://metro.org/" target="_blank">Metropolitan New York Library Council</a> with generous support from <a href="https://mellon.org/" target="_blank">the Mellon Foundation</a>. Site built by <a href="http://beakerdigital.com/" target="_blank">Beaker Digital</a>. This site & all components are licensed under CC BY 4.0 <a class="preview" href="https://creativecommons.org/licenses/by/4.0/" target="_blank"><img src="{{base}}/assets/images/ccby_license.png" alt="Creative Commons Attribution 4.0 International (CC BY 4.0)">
 				</a>
 	</div>
 </footer>
