add simplecast <link> for rss auto discovery

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,5 @@
 
   <link rel="stylesheet" href="{{ base }}/assets/css/main.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  <link rel="alternate" type="application/rss+xml" title="Preserve This Podcast RSS" href="https://rss.simplecast.com/podcasts/10324/rss" />
 </head>
