change Survey to Data

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 		<a href="{{ base }}/about.html">About</a>
 		{% if site.data.content.episodes %}<a href="{{ base }}/#podcast">Podcast</a>{% endif %}
 		<a href="{{ base }}/#zine">Zine</a>
-	    	<a href="{{ site.data.content.survey_link }}" target="_blank">Survey</a>
+	    	<a href="{{ site.data.content.survey_link }}" target="_blank">Data</a>
 		<a href="{{ base }}/#events">Events</a>
 	    	<a href="https://www.teepublic.com/user/preservethispodcast" target="_blank">Merch</a>
 		<a href="{{ site.data.content.twitter_link }}" target="_blank">
