--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 	    	<a href="{{ site.data.content.survey_link }}" target="_blank">Data</a>
 		<a href="{{ base }}/#events">Events</a>
 	    	<a href="https://www.teepublic.com/user/preservethispodcast" target="_blank">Merch</a>
-		<a href="{{ site.data.content.twitter_link }}" target="_blank">
+		<a href="{{ site.data.content.twitter_link }}" target="_blank"><meta name="twitter:card" content="twitter icon link out to @preservethispod twitter feed">
 			<span class="icon">
 			  <i class="fab fa-twitter"></i>
 			</span>
