update href to html pages to /pages throughout site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 	<a href="/" class="is-pulled-left"><h1>Preserve This Podcast</h1></a>
 	<nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-menu" id="navMenu">
-		<a href="{{ base }}/about.html">About</a>
+		<a href="{{ base }}/pages/about.html">About</a>
 		{% if site.data.content.episodes %}<a href="{{ base }}/#podcast">Podcast</a>{% endif %}
 		<a href="{{ base }}/#zine">Zine</a>
 	    	<a href="{{ site.data.content.survey_link }}" target="_blank">Data</a>
